--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,7 +1,6 @@
 tasks:
   - init: echo "Replace me with a build script for the project."
-    command: echo "Replace me with omething that should run on every start, or just
-      remove me entirely."
+    command: python3 -m http.server 3000
 image:
   file: .gitpod.Dockerfile
 ports:
